# sekha-controller

./: .coverage  .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  TESTING.md  TODO.md  codecov.yml  config.toml  deny.toml  install.sh  lcov.info  rust-toolchain.toml  sekha.db  sqlite-chrono-decode.patch  sqlite-chrono-encode.patch  sqlite-chrono-fix.patch  tarpaulin.toml
.github/workflows/: ci.yml  integration.yml  security.yml
docs/user/: api-reference.md
llm-bridge/: .env.example
migration/: Cargo.toml
migration.backup/: .env  Cargo.toml
migration.backup/src/: lib.rs  m20241211_000001_create_conversations.rs  m20241211_000002_create_messages.rs
migration/src/: lib.rs  m20241211_000001_create_conversations.rs  m20241211_000002_create_messages.rs  m20241211_000003_create_semantic_tags.rs  m20241211_000004_create_hierarchical_summaries.rs  m20241211_000005_create_knowledge_graph_edges.rs  m20241211_000006_add_updated_at_triggers.rs  m20241211_000006_add_updated_at_triggers.rs.implement  m20241211_000007_create_fts.rs  m20241211_000007_create_fts.rs.implement  main.rs
migrations/: 001_create_conversations.sql  002_create_messages.sql  003_create_semantic_tags.sql  004_create_hierarchical_summaries.sql  005_create_knowledge_graph_edges.sql  006_add_updated_at_triggers.sql  006_add_updated_at_triggers.sql.implement  007_create_fts.sql  007_create_fts.sql.implement  007_create_fts_triggers_only.sql  placeholder.delete
patches/sea-orm-2.0.0-rc.22/: Cargo.toml
patches/sea-orm-2.0.0-rc.22/src/driver/: sqlx_sqlite.rs
patches/sea-orm-2.0.0-rc.22/src/driver/sqlx_sqlite/: value.rs
patches/sea-query-1.0.0-rc.23/: .cargo_vcs_info.json  Cargo.toml
scripts/: dev-run.sh  dev-setup.sh  test.sh
sekha-cli/: main.py  pyproject.toml
sekha-js-sdk/: package.json
sekha-js-sdk/src/: client.ts  index.ts
sekha-js-sdk/tests/: client.test.ts  mocks.ts
sekha-python-sdk/: README.md
sekha-python-sdk/sekha/: __init__.py  client.py  errors.py  models.py  utils.py
sekha-python-sdk/tests/: test_client.py
src/: auth.backup  auth.rs  config.rs  lib.rs  main.rs
src/api/: dto.rs  mcp.rs  mod.rs  rate_limiter.rs  route.rs  routes.rs  test.rs
src/config/: placeholder.delete
src/memory/: placeholder.delete
src/models/: internal.rs
src/orchestrator/: context_assembly.rs  importance_engine.rs  label_intelligence.rs  mod.rs  pruning_engine.rs  summarizer.rs
src/services/: embedding_provider.rs  embedding_queue.rs  embedding_queue_tests.rs  embedding_service copy.backup  embedding_service.rs  file_watcher.rs  llm_bridge_client.rs  mod.rs
src/storage/: chroma_client.rs  db.rs  mod.rs  placeholder.delete  repository.rs  repository_tests.rs
src/storage/entities/: conversations.rs  hierarchical_summaries.rs  knowledge_graph_edges.rs  messages.rs  mod.rs  prelude.rs  semantic_tags.rs
tests/: api_test.rs  app_insert_test1.rs  app_insert_test2.rs  app_insert_test2.rs.justincase  app_insert_test4.rs  app_insert_test4.rs.justincase  create_message_test.rs  create_message_test.rs.justincase  create_with_message_test.rs  create_with_message_test.rs.justincase  integration.sh  integration_test.backup  integration_test.rs  migration_schema_test.rs  simple_insert_test.rs  test_install.sh
tests/benchmarks/: insert_1m_messages.rs
tests/e2e/: smoke_test copy.backup  smoke_test.sh
tests/integration/: api.rs  concurrency.rs  file_watcher.rs  mcp.rs  mod.rs  orchestrator.rs  orchestrator_edge_cases.rs  repository.rs
tests/unit/: auth_test.rs  chroma_client_test.rs  config_test.rs  embedding_provider_test.rs  embedding_queue_test.rs  embedding_service_test.rs  file_watcher_test.rs  importance_engine_test.rs  llm_bridge_test.rs  mod.rs  pruning_engine_test.rs  rate_limiter_test.rs  route_test.rs  routes_test.rs
tests/unit/storage/: mod.rs
tmp/seaorm-test/: Cargo.toml  migration.sql
