[package]
name = "sekha-controller"
version = "0.1.0"
edition = "2021"

[lib]
name = "sekha_controller"
path = "src/lib.rs"

[[bin]]
name = "sekha-controller"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server
axum = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
dotenv = "0.15.0"

# File watching
notify = "6.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# API documentation
utoipa = "4.2"
utoipa-swagger-ui = { version = "4.0", features = ["axum"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUIDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Crypto utilities
sha2 = "0.10"
hex = "0.4"

# Async traits
async-trait = "0.1"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Utilities
once_cell = "1.19"
futures = "0.3"
tower = "0.4"

# Database
sea-orm = { version = "=2.0.0-rc.20", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "=2.0.0-rc.20"
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite"] }

# CHROMA INTEGRATION - Vector Database
chromadb = "^2.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# EMBEDDING GENERATION - Ollama
ollama-rs = "0.3.3"

# VECTOR MATH (if needed)
ndarray = "0.15"

[dev-dependencies]
tempfile = "3.23.0"
toml = "0.9.8"
tower-test = "0.4"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[[test]]
name = "api_test"
path = "tests/api_test.rs"