[package]
name = "sekha-controller"
version = "0.1.0"
edition = "2021"

[lib]
name = "sekha_controller"
path = "src/lib.rs"

[[bin]]
name = "sekha-controller"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server
axum = "=0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.15.19"
dotenv = "0.15.0"

# File watching
notify = "8.2.0"
dirs = "5.0"  # For home directory detection

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# API documentation
utoipa = { version = "5.4.0", features = ["uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# UUIDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Crypto utilities
sha2 = "0.10"
hex = "0.4"

# Async traits
async-trait = "0.1"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Utilities
once_cell = "1.19"
futures = "0.3"
tower = "0.5.2"
tower-http = { version = "0.6", features = ["cors", "trace"] }
governor = "0.6"

# Database
sea-orm = { version = "=2.0.0-rc.20", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "=2.0.0-rc.20"
sea-orm-cli = "=2.0.0-rc.20"
sea-orm-codegen = "=2.0.0-rc.20"
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite"] }

# CHROMA INTEGRATION - Vector Database
chromadb = "^2.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# EMBEDDING GENERATION - Ollama
ollama-rs = "0.3.3"

# VECTOR MATH (if needed)
ndarray = "0.17.1"

# Optional: Better XML parsing
quick-xml = { version = "0.31", optional = true }

[features]
cli = []  # Enable CLI tool
xml = ["quick-xml"]  # Better XML parsing

[dev-dependencies]
tempfile = "3.23.0"
toml = "0.9.8"
tower-test = "0.4"
wiremock = "0.6.5"
sea-orm-cli = "=2.0.0-rc.20"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[[test]]
name = "api_test"
path = "tests/api_test.rs"

[[bin]]
name = "benchmark"
path = "tests/benchmarks/insert_1m_messages.rs"