[package]
name = "sekha-controller"
version = "0.1.0"
edition = "2021"
authors = ["Sekha AI <dev@sekha-ai.dev>"]
rust-version = "1.75"
description = "Persistent AI memory controller for context management"
homepage = "https://sekha-ai.dev"
repository = "https://github.com/sekha-ai/sekha-controller"
license = "AGPL-3.0-or-later"
keywords = ["ai", "memory", "llm", "context", "ml"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"

[package.metadata.tarpaulin]
# Exclude integration methods that require running services
exclude-files = []
exclude = [
    "src/services/embedding_service.rs:process_message",
    "src/services/embedding_service.rs:process_message_with_retry", 
    "src/services/embedding_service.rs:search_messages"
]

# Binary configuration
[[bin]]
name = "sekha-controller"
path = "src/main.rs"

[lib]
name = "sekha_controller"
path = "src/lib.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.49", features = ["full"] }

libc = "0.2"

# HTTP server
axum = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.15.19"
dotenvy = "0.15.0"

# File watching
notify = "8.2.0"
dirs = "5.0"  # For home directory detection

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# API documentation
utoipa = { version = "5.4.0", features = ["uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# UUIDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Crypto utilities
sha2 = "0.10"
hex = "0.4"

# Async traits
async-trait = "0.1"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Utilities
once_cell = "1.19"
futures = "0.3"
tower = "0.5.3"
tower-http = { version = "0.6", features = ["cors", "trace"] }
governor = "0.10"

# Database - Pin sea-query-sqlx to avoid edition 2024 issues in rc.11
sea-query-sqlx = "=0.8.0-rc.10"
sea-orm = { version = "=2.0.0-rc.22", default-features = false, features = [
    "sqlx-sqlite",
    # "sqlx-postgres",  # Disabled for now
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json", 
    "with-uuid",
    "with-bigdecimal",
    "with-time",
    # Removed: with-rust_decimal,
] }

sea-orm-migration = { version = "=2.0.0-rc.22", default-features = false }
sea-orm-cli = "=2.0.0-rc.22"
sea-orm-codegen = "=2.0.0-rc.22"
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite"] }

# Daemon requirements
daemonize-me = "2.0"
clap = { version = "4.5", features = ["derive"] }

# CHROMA INTEGRATION - Vector Database
chromadb = "^2.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# EMBEDDING GENERATION - Ollama
ollama-rs = "0.3"

# VECTOR MATH (if needed)
ndarray = "0.17.2"

# Optional: Better XML parsing
quick-xml = { version = "0.39", optional = true }

[features]
cli = []  # Enable CLI tool
xml = ["quick-xml"]  # Better XML parsing

[patch.crates-io]
sea-query = { path = "patches/sea-query-1.0.0-rc.23" }  

[dev-dependencies]
tempfile = "3.23.0"
toml = "0.9.11"
tower-test = "0.4"
wiremock = "0.6.5"
sea-orm-cli = "=2.0.0-rc.22"
mockall = "0.13"
tokio = { version = "1.49", features = ["full"] }
serde_json = "1.0"
hex = "0.4"
futures = "0.3"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[test]]
name = "api_test"
path = "tests/api_test.rs"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "benchmark"
path = "tests/benchmarks/insert_1m_messages.rs"

[[bin]]
name = "benchmark"
path = "tests/benchmarks/insert_1m_messages.rs"