[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
sea-orm-migration = { version = "=0.12.10", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
